Added stub for contact

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 			<div class="row"><p class="icontext">INFO</p></div>
 		</a>
 	</div>
+	
+	<div class="col-md-3 col-xs-3">
+		<a href="#" id="skilldiv">
+			<span class="icon glyphicon glyphicon-list-alt"></span>
+			<div class="row"><p class="icontext">SKILLS</p></div>
+		</a>
+	</div>
 	<div class="col-md-3 col-xs-3">
 		<a href="#" id="workdiv">
 			<span class="icon glyphicon glyphicon-globe"></span>
@@ -48,13 +55,7 @@
 		</a>
 	</div>
 	<div class="col-md-3 col-xs-3">
-		<a href="#">
-			<span class="icon glyphicon glyphicon-list-alt"></span>
-			<div class="row"><p class="icontext">SKILLS</p></div>
-		</a>
-	</div>
-	<div class="col-md-3 col-xs-3">
-		<a href="#">
+		<a href="#" id="contactdiv">
 			<span class="icon glyphicon glyphicon-envelope"></span>
 			<div class="row"><p class="icontext">CONTACT</p></div>
 		</a>
@@ -78,7 +79,7 @@
  </div>
  </div>
  
- <div class="row firstdiv skills">
+ <div class="row firstdiv skills" id="toscrollskills">
  <div><h1 class="skillstext">My Skills</h1></div>
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Wrapper for slides -->
@@ -124,6 +125,7 @@
 	</div>
 	<div class="col-md-1"></div>
  </div>
+ <div class="row firstdiv contact" id="toscrollcontact"><h1 class="skillstext">This is contact div</h1></div>
  
  
  
