Changed some text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  <div class="col-md-10">
 	<p>Recently graduated from University of North Texas. A paragraph (from the Ancient Greek παράγραφος paragraphos, "to write beside"
 	or "written beside") is a self-contained unit of a discourse in writing dealing with a 
-	particular point or idea. A paragraph consists of one or more sentences.</p>
+	particular point or idea. A paragraph consists of one or more sentences. Sentence consists of more words</p>
  </div>
   <div class="col-md-1"></div>	
  </div>
