--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
     
 	<div class="col-md-1"></div>
 	<div class="col-md-5 col-xs-12">
-		<div class="row col-md-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/2048.png"></img></a></div>
-		<div class="row col-md-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/pharmacy_screen.png"></img></a></div>
+		<div class="row col-md-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/2048.png"></img></a></div>
+		<div class="row col-md-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/pharmacy_screen.png"></img></a></div>
 	</div>
 	<div class="col-md-5 col-xs-12">
-		<div class="row col-md-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/2048.png"></img></a></div>
-		<div class="row col-md-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/pharmacy_screen.png"></img></a></div>
+		<div class="row col-md-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/2048.png"></img></a></div>
+		<div class="row col-md-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/pharmacy_screen.png"></img></a></div>
 	</div>
 	<div class="col-md-1"></div>
  </div>
