--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  <div class="row">
 	<div class="col-md-4"></div>
 	<div class="col-md-4 col-xs-12">
-		<div><h4 class="aboutme">ABOUT ME</h4></div></div>
+		<div><h4 class="mywork">About Me</h4></div></div>
 	<div class="col-md-4"></div>
  </div>
  <div class="row">
@@ -113,6 +113,7 @@
  
  
  <div class="row firstdiv work" id="toscrollwork">
+ 	<div><h4 class="mywork">My Work</h4></div>
     
 	<div class="col-md-1"></div>
 	<div class="col-md-5 col-xs-12">
@@ -125,7 +126,12 @@
 	</div>
 	<div class="col-md-1"></div>
  </div>
- <div class="row firstdiv contact" id="toscrollcontact"><h1 class="skillstext">This is contact div</h1></div>
+ <div class="row firstdiv contact" id="toscrollcontact"><h1 class="skillstext">My Contact</h1>
+	<p class="contacttext">LinkedIn: https://www.linkedin.com/in/kiranpalakurthy</p>
+	<p class="contacttext">Github: https://www.linkedin.com/in/kiranpalakurthy</p>
+	<p class="contacttext">Resume: https://www.linkedin.com/in/kiranpalakurthy</p>
+	<p class="contacttext">Email: kiran.palakurthy24@gmail.com</p>
+ </div>
  
  
  
