--- a/index.html
+++ b/index.html
@@ -127,10 +127,13 @@
 	<div class="col-md-1"></div>
  </div>
  <div class="row firstdiv contact" id="toscrollcontact"><h1 class="skillstext">My Contact</h1>
+ <div class="col-md-1"></div>
+	<div class="col-md-11 col-xs-12">
 	<p class="contacttext">LinkedIn: https://www.linkedin.com/in/kiranpalakurthy</p>
 	<p class="contacttext">Github: https://www.linkedin.com/in/kiranpalakurthy</p>
 	<p class="contacttext">Resume: https://www.linkedin.com/in/kiranpalakurthy</p>
 	<p class="contacttext">Email: kiran.palakurthy24@gmail.com</p>
+</div>	
  </div>
  
  
