skills for mobile in the box view

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 		</div>
 		<div class="col-md-1"></div>
 	</div>
+	<!-- <div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4"><img class="titlebar" src="images/titlebar.JPG"><h4 class="titletext">FRONTEND DEVELOPER</h4></img></div>
+		<div class="col-md-4"></div>
+	</div> -->
 
 </div>
  <div class="row firstdiv icons">
@@ -104,6 +109,18 @@
   
 </div> <!-- Carousel -->
  
+	
+ </div>
+ <div class="row firstdiv skillsmobile">
+  <div><h1 class="skillstext">My Skills</h1></div>
+	<div class="col-xs-12 skillnamemobile">C</div>
+	<div class="col-xs-12 skillnamemobile">C++</div>
+	<div class="col-xs-12 skillnamemobile">JAVA</div>
+	<div class="col-xs-12 skillnamemobile">JAVASCRIPT</div>
+	<div class="col-xs-12 skillnamemobile">HTML</div>
+	<div class="col-xs-12 skillnamemobile">CSS</div>
+	<div class="col-xs-12 skillnamemobile">ANGULAR</div>
+	<div class="col-xs-12 skillnamemobile">MYSQL</div>
 	
  </div>
  
