with large screen set

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
 <div class="firstimagediv">
     <div class="row">
-		<div class="col-md-4 col-xs-3"></div>
-		<div class="col-md-4 col-xs-6">
+		<div class="col-lg-4 col-md-4 col-xs-3"></div>
+		<div class="col-lg-4 col-md-4 col-xs-6">
 			<img class="profilepicture center-block" src="images/kiran_profile.jpg"></img>
 		</div>
 		
-		<div class="col-md-4 col-xs-3"></div>
+		<div class="col-md-4 col-lg-4 col-xs-3"></div>
 	</div>
 	<div class="row">
 		
-		<div class="col-md-1"></div>
-		<div class="col-md-10">
+		<div class="col-md-1 col-lg-1"></div>
+		<div class="col-md-10 col-lg-10">
 			<h1 class="profilename vcenter">KIRAN PALAKURTHY</h1>
 		</div>
-		<div class="col-md-1"></div>
+		<div class="col-md-1 col-lg-1"></div>
 	</div>
 	<!-- <div class="row">
 		<div class="col-md-4"></div>
@@ -40,26 +40,26 @@
 </div>
  <div class="row firstdiv icons">
 	
-	<div class="col-md-3 col-xs-3">
+	<div class="col-md-3 col-xs-3 col-lg-3">
 		<a href="#" id="infodiv">
 			<span class="icon glyphicon glyphicon-info-sign"></span>
 			<div class="row"><p class="icontext">INFO</p></div>
 		</a>
 	</div>
 	
-	<div class="col-md-3 col-xs-3">
+	<div class="col-md-3 col-xs-3 col-lg-3">
 		<a href="#" id="skilldiv">
 			<span class="icon glyphicon glyphicon-list-alt"></span>
 			<div class="row"><p class="icontext">SKILLS</p></div>
 		</a>
 	</div>
-	<div class="col-md-3 col-xs-3">
+	<div class="col-md-3 col-xs-3 col-lg-3">
 		<a href="#" id="workdiv">
 			<span class="icon glyphicon glyphicon-globe"></span>
 			<div class="row"><p class="icontext">WORK</p></div>
 		</a>
 	</div>
-	<div class="col-md-3 col-xs-3">
+	<div class="col-md-3 col-xs-3 col-lg-3">
 		<a href="#" id="contactdiv">
 			<span class="icon glyphicon glyphicon-envelope"></span>
 			<div class="row"><p class="icontext">CONTACT</p></div>
@@ -68,19 +68,19 @@
  </div> 
  <div class="firstdiv info" id="toscrollinfo">
  <div class="row">
-	<div class="col-md-4"></div>
-	<div class="col-md-4 col-xs-12">
+	<div class="col-md-4 col-lg-4"></div>
+	<div class="col-md-4 col-lg-4 col-xs-12">
 		<div><h4 class="mywork">About Me</h4></div></div>
-	<div class="col-md-4"></div>
+	<div class="col-md-4 col-lg-4"></div>
  </div>
  <div class="row">
- <div class="col-md-1"></div>
- <div class="col-md-10">
-	<p>Recently graduated from University of North Texas. A paragraph (from the Ancient Greek παράγραφος paragraphos, "to write beside"
-	or "written beside") is a self-contained unit of a discourse in writing dealing with a 
-	particular point or idea. A paragraph consists of one or more sentences. Sentence consists of more words</p>
+ <div class="col-md-1 col-lg-1 col-xs-1"></div>
+ <div class="col-md-10 col-lg-10 col-xs-10">
+	<p class="aboutmetext">Hi there! I am Kiran. I hand make with care and love all my user interfaces and like the challenge
+	of making them work across all devices and platforms. At the heart I am a software developer well versed with
+	the art and craft of software development. Do checkout my work and reach out to me and I would be glad to share more.</p>
  </div>
-  <div class="col-md-1"></div>	
+  <div class="col-md-1 col-lg-1 col-xs-1"></div>	
  </div>
  </div>
  
@@ -89,18 +89,18 @@
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
-    <div class="item active col-md-12 col-xs-12">
-     <div class="col-md-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">C</h4></div></div>
-	 <div class="col-md-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">C++</h4></div></div>
-	 <div class="col-md-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">JAVA</h4></div></div>
-	 <div class="col-md-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">JAVASCRIPT</h4></div></div>
+    <div class="item active col-lg-12 col-md-12 col-xs-12">
+     <div class="col-md-3 col-lg-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">C</h4></div></div>
+	 <div class="col-md-3 col-lg-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">C++</h4></div></div>
+	 <div class="col-md-3 col-lg-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">JAVA</h4></div></div>
+	 <div class="col-md-3 col-lg-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">JAVASCRIPT</h4></div></div>
     </div>
     
     <div class="item col-md-12 col-xs-12">
-      <div class="col-md-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">HTML</h4></div></div>
-      <div class="col-md-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">CSS</h4></div></div>
-	  <div class="col-md-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">ANGULAR</h4></div></div>
-	  <div class="col-md-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">MYSQL</h4></div></div>
+      <div class="col-md-3 col-lg-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">HTML</h4></div></div>
+      <div class="col-md-3 col-lg-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">CSS</h4></div></div>
+	  <div class="col-md-3 col-lg-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">ANGULAR</h4></div></div>
+	  <div class="col-md-3 col-lg-3 col-xs-3"><div class="roundedimage"><h4 class="skillname">MYSQL</h4></div></div>
     </div>
   </div>
  
@@ -132,20 +132,21 @@
  <div class="row firstdiv work" id="toscrollwork">
  	<div><h4 class="mywork">My Work</h4></div>
     
-	<div class="col-md-1"></div>
-	<div class="col-md-5 col-xs-12">
-		<div class="row col-md-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/2048.png"></img></a></div>
-		<div class="row col-md-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/pharmacy_screen.png"></img></a></div>
+	<div class="col-md-1 col-lg-1"></div>
+	<div class="col-md-5 col-lg-5 col-xs-12">
+		<div class="row col-md-12 col-lg-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/2048.png"></img></a></div>
+		<div class="row col-md-12 col-lg-12 col-xs-12"><a href="http://moe.csci.unt.edu:8080/~14SPUSMXHCIDB14/kiran/First.jsp"><img class="work_image" src="images/pharmacy_screen.png"></img></a></div>
 	</div>
-	<div class="col-md-5 col-xs-12">
-		<div class="row col-md-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/2048.png"></img></a></div>
-		<div class="row col-md-12 col-xs-12"><a href="http://kiranpalakurthy.github.io"><img class="work_image" src="images/pharmacy_screen.png"></img></a></div>
+	<div class="col-md-5 col-lg-5 col-xs-12">
+		<div class="row col-md-12 col-lg-12 col-xs-12"><a href="#"><img class="work_image" src="images/commonfloor.png"></img></a></div>
+		
+		<div class="row col-md-12 col-lg-12 col-xs-12"><a href="http://moe.csci.unt.edu/~14SPUSMXHCIDB14/contactus/demos/accordion/events.php"><img class="work_image" src="images/appalachian.PNG"></img></a></div>
 	</div>
-	<div class="col-md-1"></div>
+	<div class="col-md-1 col-lg-1"></div>
  </div>
  <div class="row firstdiv contact" id="toscrollcontact"><h1 class="skillstext">My Contact</h1>
- <div class="col-md-1"></div>
-	<div class="col-md-11 col-xs-12">
+ <div class="col-md-1 col-lg-1"></div>
+	<div class="col-md-11 col-lg-11 col-xs-12">
 	<p class="contacttext">LinkedIn: https://www.linkedin.com/in/kiranpalakurthy</p>
 	<p class="contacttext">Github: https://www.linkedin.com/in/kiranpalakurthy</p>
 	<p class="contacttext">Resume: https://www.linkedin.com/in/kiranpalakurthy</p>
