--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<div class="row col-md-12 col-lg-12 col-xs-12"><a href="http://moe.csci.unt.edu:8080/~14SPUSMXHCIDB14/kiran/First.jsp"><img class="work_image" src="images/pharmacy_screen.png"></img></a></div>
 	</div>
 	<div class="col-md-5 col-lg-5 col-xs-12">
-		<div class="row col-md-12 col-lg-12 col-xs-12"><a href="#"><img class="work_image" src="images/commonfloor.png"></img></a></div>
+		<div class="row col-md-12 col-lg-12 col-xs-12"><a href="#"><img class="work_image" src="images/commonfloor.PNG"></img></a></div>
 		
 		<div class="row col-md-12 col-lg-12 col-xs-12"><a href="http://moe.csci.unt.edu/~14SPUSMXHCIDB14/contactus/demos/accordion/events.php"><img class="work_image" src="images/appalachian.PNG"></img></a></div>
 	</div>
