mobile skills fixed

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
  
 	
  </div>
- <div class="row firstdiv skillsmobile">
+ <div class="row firstdiv skillsmobile" id="toscrollskillsmobile">
   <div><h1 class="skillstext">My Skills</h1></div>
 	<div class="col-xs-12 skillnamemobile">C</div>
 	<div class="col-xs-12 skillnamemobile">C++</div>
